--- a/NNetSimu/WindowConfiguration2.cnf
+++ b/NNetSimu/WindowConfiguration2.cnf
@@ -2,7 +2,9 @@ MoveWindow IDM_CONS_WINDOW -1633 477 1033 838
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW 0 300 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 433 105 1920 1021
+MoveWindow IDM_APPL_WINDOW 2781 362 1920 1021
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 441 156 1904 940
+MoveWindow IDD_PARAMETER_DLG 2794 424 316 283
+ShowWindow IDD_PARAMETER_DLG SW_SHOWNORMAL
+MoveWindow IDM_MAIN_WINDOW 2789 413 1904 940
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
