--- a/NNetSimu/NNetSimu.rc
+++ b/NNetSimu/NNetSimu.rc
@@ -40,6 +40,7 @@ IDC_NNET_SIMU_MAIN MENU
         POPUP "&Windows"
         {
 			MENUITEM "Show &cursor window", IDM_CRSR_WINDOW
+			MENUITEM "Show &parameter window", IDM_PARAM_WINDOW
 		}
     }
     POPUP "&Help"
@@ -65,7 +66,7 @@ FONT 8, "MS Shell Dlg", 0, 0, 1
 }
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDD_PARAMETER_DLG DIALOG 0, 0, 200, 150
+IDM_PARAM_WINDOW DIALOG 0, 0, 200, 150
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "Global parameters"
 FONT 8, "Ms Shell Dlg"
@@ -95,6 +96,7 @@ IDC_NNET_SIMU_MAIN ACCELERATORS
     "-",            IDM_ZOOM_OUT,     ASCII
     "y",            IDM_FORWARD,      VIRTKEY, CONTROL
 	"c",            IDM_CRSR_WINDOW,  ASCII,   ALT
+	"p",            IDM_PARAM_WINDOW, ASCII,   ALT
 	"?",            IDM_ABOUT,        ASCII,   ALT
 	VK_DELETE,      IDD_REMOVE_SHAPE, VIRTKEY
 	VK_ESCAPE,      IDM_ESCAPE,       VIRTKEY
