--- a/NNetSimu/WindowConfiguration2.cnf
+++ b/NNetSimu/WindowConfiguration2.cnf
@@ -1,10 +1,10 @@
+MoveWindow IDM_PARAM_WINDOW 2799 458 316 283
+ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW -1633 477 1033 838
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 0 300 301 201
+MoveWindow IDM_CRSR_WINDOW 2805 751 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 2781 362 1920 1021
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDD_PARAMETER_DLG 2794 424 316 283
-ShowWindow IDD_PARAMETER_DLG SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW 2789 413 1904 940
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
