--- a/NNetWindows/NNetSimuWindows.vcxproj.filters
+++ b/NNetWindows/NNetSimuWindows.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="win32_parameterDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_scale.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_NNetWorkThread.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="win32_parameterDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_scale.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
