Intermediate version. Arrows implemented.

--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Direct2D;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)Direct2D;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Direct2D;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
@@ -84,7 +84,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)Direct2D;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -95,6 +95,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -149,6 +150,7 @@
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <AdditionalOptions>
       </AdditionalOptions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -165,7 +167,6 @@
     <ClInclude Include="NNetModel.h" />
     <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="NNetParameters.h" />
-    <ClInclude Include="OutputNeuron.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Segment.h" />
     <ClInclude Include="Shape.h" />
@@ -179,7 +180,6 @@
     <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="NNetModel.cpp" />
     <ClCompile Include="NNetModelStorage.cpp" />
-    <ClCompile Include="OutputNeuron.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Shape.cpp" />
   </ItemGroup>
