--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -172,6 +172,8 @@
     <ClInclude Include="Shape.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="tHighlightType.h" />
+    <ClInclude Include="tShapeType.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseKnot.cpp" />
