--- a/NNetWindows/NNetSimuWindows.vcxproj.filters
+++ b/NNetWindows/NNetSimuWindows.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="win32_scale.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AnimationThread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_NNetWorkThread.cpp">
