--- a/NNetSimu/NNetSimu.rc
+++ b/NNetSimu/NNetSimu.rc
@@ -92,12 +92,11 @@ STRINGTABLE
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 IDC_NNET_SIMU_MAIN ACCELERATORS
 {
-    "g",            IDM_FORWARD,      ASCII
     "r",            IDM_RUN,          ASCII
     "s",            IDM_STOP,         ASCII
     "+",            IDM_ZOOM_IN,      ASCII
     "-",            IDM_ZOOM_OUT,     ASCII
-    "y",            IDM_FORWARD,      VIRTKEY, CONTROL
+    "s",            IDM_SAVE_MODEL,   VIRTKEY, CONTROL
 	"c",            IDM_CRSR_WINDOW,  ASCII,   ALT
 	"p",            IDM_PARAM_WINDOW, ASCII,   ALT
 	"?",            IDM_ABOUT,        ASCII,   ALT
