--- a/Win32_utilities/Win32_utilities.vcxproj
+++ b/Win32_utilities/Win32_utilities.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="win32_util.h" />
     <ClInclude Include="win32_util_resource.h" />
     <ClInclude Include="win32_winManager.h" />
+    <ClInclude Include="win32_zoomControl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
