--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -140,7 +140,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalOptions> </AdditionalOptions>
+      <AdditionalOptions>
+      </AdditionalOptions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -170,6 +171,7 @@
     <ClInclude Include="PointType.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="RectType.h" />
+    <ClInclude Include="RingBuffer.h" />
     <ClInclude Include="SlowMotionRatio.h" />
     <ClInclude Include="SmoothMove.h" />
     <ClInclude Include="stdafx.h" />
